--- a/index.html
+++ b/index.html
@@ -4,64 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>APP Covid-19</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="syte.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
 </head>
 <body>
+    <!-- <div class="container">  -->
     <nav class="navbar navbar-light bg-light navbarSombra">
-        <a class="navbar-brand">Coronavirus - COVID19 Graficos Estadisticos</a>
+        <a class="navbar-brand" id="textcovid"></a>
         <form class="form-inline">
             <span class="navbar-text" id="lastUpdate" ></span> 
         </form>
       </nav>
-
-      <div class="contenedor">
-          <div class="fila-1">
-            <p class="font-weight-bold" id="pfecha">Datos confirmados hasta </p>
-           
-            <select  class="form-control" id="country" onchange="onSelected()" width="30px">
+      <div class="container boxShadow">
+            <div class="row fila-1">
+           <div class="col-md-8">
+               <p class="font-weight-bold" id="pfecha"> </p>
+            </div>
+           <div class="col-md-4">
+               <select  class="form-control" id="country" onchange="onSelected()"  >
                 <option value="all" selected>Selecciona una opcion</option>
             </select>
         </div>
-        <div class="fila-2">
-            <div id="" class="box box-1">
-                <p class="font-weight-bold">Confirmados</p>
-                <p class="font-weight-bold" id="confirmed">----</p>
+    </div>
+
+            <div class="row fila-2">
+                <div id="" class="box box-1 col-sm">
+                    <p class="font-weight-bold">Confirmados</p>
+                    <p class="font-weight-bold" id="confirmed">----</p>
+                </div>
+                <div id="" class="box box-2 col-sm">
+                    <p class="font-weight-bold">Recuperados</p> 
+                    <p class="font-weight-bold" id="recovered">----</p>   
+                </div>
+                <div id="" class="box box-3 col-sm">
+                    <p class="font-weight-bold">Muertos</p>
+                    <p class="font-weight-bold" id="death">----</p>  
+                </div>
             </div>
-            <div id="" class="box box-2">
-                <p class="font-weight-bold">Recuperados</p> 
-                <p class="font-weight-bold" id="recovered">----</p>   
-            </div>
-            <div id="" class="box box-3">
-                <p class="font-weight-bold">Muertos</p>
-                <p class="font-weight-bold" id="death">----</p>  
-            </div>
-        </div>
-        </div>
-        <div class="contenedor">
-        <div class="fila-3">
-            <canvas id="myChart" class="myBox myChart" ></canvas>
-            <div class="myBox">
-                <h3 class="text-center">Los 12 paises con mas casos - <a href="https://rapidapi.com/api-sports/api/covid-193">Covid-193</a> </h3>
-            <table class="table table-bordered">
-                <thead>
-                  <tr>
-                    <th scope="col">Pais</th>
-                    <th scope="col">Confirmados</th>
-                    <th scope="col">Recuperados</th>
-                    <th scope="col">Muertos</th>
-                  </tr>
-                </thead>
-                <tbody id="tBody">
-                </tbody>
-            </table>
-            </div>
-        </div>     
       </div>
 
-      <div class="contenedor">
+      <div class="container boxShadow" >
+            <div class="row">
+                    <div class="col-md-6 " id="charts">
+                        <canvas id="myChart" class="myChart" ></canvas>
+                    </div>
+                    <div class="col-md-6">
+                        <h3 class="text-center">Los 10 paises con mas casos - <a href="https://rapidapi.com/api-sports/api/covid-193">Covid-193</a> </h3>
+                        <div class="table-responsive">
+                            <table class="table table-bordered">
+                            <thead>
+                            <tr>
+                                <th scope="col">Pais</th>
+                                <th scope="col">Confirmados</th>
+                                <th scope="col">Recuperados</th>
+                                <th scope="col">Muertos</th>
+                            </tr>
+                            </thead>
+                            <tbody id="tBody">
+                            </tbody>
+                            </table>
+                        </div>    
+                    </div>
+            </div>     
+      </div>
+      
+      <div class="container boxShadow">
           <div class="box-4">
               <p class="p" >Desarrollado por <a href="https://github.com/mchavz">MCHAVEZ</a></p>
                 <p class="p" >Data Source get update  every 8 hours <a href="https://covid19.mathdro.id/">covid19</a></p>
@@ -69,6 +79,7 @@
             </div>
 
       </div>
+    <!-- </div> -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
