--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       
       <div class="container boxShadow">
           <div class="box-4">
-              <p class="p" >Desarrollado por <a href="https://github.com/mchavz">MCHAVEZ</a></p>
+              <p class="p" >Desarrollado por <a href="https://github.com/MCHAVEZ-PE">MCHAVEZ</a></p>
                 <p class="p" >Data Source get update  every 8 hours <a href="https://covid19.mathdro.id/">covid19</a></p>
                 <p class="p">Data Source get update  every 8 hours <a href="https://rapidapi.com/api-sports/api/covid-193">covid193</a></p>
             </div>
