cambiando class de CSS

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
             <div class="row fila-2">
                 <div id="" class="box box-1 col-sm">
                     <p class="font-weight-bold">Confirmados</p>
-                    <p class="font-weight-bold" id="confirmed">----</p>
+                    <p class="font-weight-bold numCasos" id="confirmed">----</p>
                 </div>
                 <div id="" class="box box-2 col-sm">
                     <p class="font-weight-bold">Recuperados</p> 
-                    <p class="font-weight-bold" id="recovered">----</p>   
+                    <p class="font-weight-bold numCasos" id="recovered">----</p>   
                 </div>
                 <div id="" class="box box-3 col-sm">
                     <p class="font-weight-bold">Muertos</p>
-                    <p class="font-weight-bold" id="death">----</p>  
+                    <p class="font-weight-bold numCasos" id="death">----</p>  
                 </div>
             </div>
       </div>
@@ -59,7 +59,7 @@
                             <tr>
                                 <th scope="col">Pais</th>
                                 <th scope="col">Confirmados</th>
-                                <th scope="col">Recuperados</th>
+                                <th scope="col" class="celda">Recuperados</th>
                                 <th scope="col">Muertos</th>
                             </tr>
                             </thead>
@@ -73,7 +73,7 @@
       
       <div class="container boxShadow">
           <div class="box-4">
-              <p class="p" >Desarrollado por <a href="https://github.com/MCHAVEZ-PE">MCHAVEZ</a></p>
+              <p class="p" >Desarrollado por <a target="_blank" href="https://github.com/MCHAVEZ-PE">MCHAVEZ</a></p>
                 <p class="p" >Data Source get update  every 8 hours <a href="https://covid19.mathdro.id/">covid19</a></p>
                 <p class="p">Data Source get update  every 8 hours <a href="https://rapidapi.com/api-sports/api/covid-193">covid193</a></p>
             </div>
