Add Chatbot with CAI

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
             </div>
 
       </div>
+
+          <script src="https://cdn.cai.tools.sap/webchat/webchat.js" 
+          channelid="81f9a6d7-9211-4b72-b47f-62e56ccb733e" token="18be6fb85d1c23d837d91f8944c8847a" 
+          id="cai-webchat"></script>
     <!-- </div> -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
